arrayToValuesList should be fixed